[gd_scene load_steps=11 format=3 uid="uid://c2ch44wucrt8m"]

[ext_resource type="Script" path="res://src/main/simple_menu.gd" id="1_3rbfd"]
[ext_resource type="Script" path="res://src/main/main.gd" id="1_46xse"]
[ext_resource type="PackedScene" uid="uid://d4in7v80fs4g5" path="res://src/draw_container/draw_container.tscn" id="3_3liki"]
[ext_resource type="Script" path="res://src/config/project_config.gd" id="5_iwf0a"]
[ext_resource type="Script" path="res://src/main/layer_buttons.gd" id="5_lepq6"]
[ext_resource type="PackedScene" uid="uid://k8o4b052xvcy" path="res://src/main/pen_setting.tscn" id="6_ge575"]

[sub_resource type="InputEventKey" id="InputEventKey_s26vr"]
device = -1
keycode = 80
unicode = 112

[sub_resource type="Shortcut" id="Shortcut_o7n6u"]
events = [SubResource("InputEventKey_s26vr")]

[sub_resource type="InputEventKey" id="InputEventKey_0bfty"]
device = -1
keycode = 86
unicode = 118

[sub_resource type="Shortcut" id="Shortcut_3im42"]
events = [SubResource("InputEventKey_0bfty")]

[node name="Main" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46xse")

[node name="ConfigData" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_iwf0a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SimpleMenu" type="MenuBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
flat = true
script = ExtResource("1_3rbfd")

[node name="top_toolbar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EditContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/EditContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="drawing_toolbar" type="PanelContainer" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/drawing_toolbar"]
layout_mode = 2

[node name="tool_button_container" type="BoxContainer" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/drawing_toolbar/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="pen" type="Button" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/drawing_toolbar/ScrollContainer/tool_button_container"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
shortcut = SubResource("Shortcut_o7n6u")
text = "pen"

[node name="move" type="Button" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/drawing_toolbar/ScrollContainer/tool_button_container"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
shortcut = SubResource("Shortcut_3im42")
text = "move"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer"]
layout_mode = 2
split_offset = -300

[node name="DrawContainer" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/HSplitContainer" instance=ExtResource("3_3liki")]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/HSplitContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/HSplitContainer/PanelContainer"]
layout_mode = 2
tab_focus_mode = 0

[node name="LayerButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/HSplitContainer/PanelContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("5_lepq6")

[node name="PenSetting" parent="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/HSplitContainer/PanelContainer/TabContainer" instance=ExtResource("6_ge575")]
visible = false
layout_mode = 2

[connection signal="menu_pressed" from="MarginContainer/VBoxContainer/SimpleMenu" to="." method="_on_simple_menu_menu_pressed"]
[connection signal="selected_layers" from="MarginContainer/VBoxContainer/EditContainer/HSplitContainer/HSplitContainer/PanelContainer/TabContainer/LayerButtons" to="." method="_on_layer_buttons_selected_layers"]
